--- a/_site.yml
+++ b/_site.yml
@@ -1,9 +1,11 @@
 name: "my-website"
 navbar:
-  title: "My Website"
+  title: "Beau Lucas"
   left:
     - text: "Home"
       href: index.html
-    - text: "About"
+    - text: "About Me"
       href: about.html
+    - text: "Contact"
+      href: contact.html
 output_dir: "."
