--- a/_site.yml
+++ b/_site.yml
@@ -8,4 +8,8 @@ navbar:
       href: about.html
     - text: "Contact"
       href: contact.html
+    - text: "Projects"
+      href: projects.html
+    - text: "Book Reviews"
+      href: book_reviews.html
 output_dir: "."
